--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -75,6 +75,8 @@
                                  :countries="countries"
                                  :customerEditMode="customerEditMode"
                                  :languages="languages"
+                                 :customerAddressAttributeSets="customerAddressAttributeSets"
+                                 :customerAttributeSets="customerAttributeSets"
                                  :language="language"
                                  :isLoading="isLoading"
                                  @activateCustomerEditMode="onActivateCustomerEditMode">
