--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.html.twig
@@ -31,6 +31,7 @@
                             <sw-customer-address-form :address="currentAddress"
                                                       :countries="countries"
                                                       :customer="customer"
+                                                      :attributeSets="customerAddressAttributeSets"
                                                       @change-default-address="onChangeDefaultAddress">
                             </sw-customer-address-form>
                         {% endblock %}
