--- a/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
@@ -43,6 +43,14 @@
                 {% block sw_order_detail_content_view %}
                     <router-view :order="order" ref="baseComponent" @sw-order-detail-base-error = "onError"></router-view>
                 {% endblock %}
+
+                {% block sw_order_detail_attribute_sets %}
+                    <sw-attribute-set-renderer
+                            v-if="next754"
+                            :entity="order"
+                            :sets="attributeSets">
+                    </sw-attribute-set-renderer>
+                {% endblock %}
             </sw-card-view>
         {% endblock %}
     </sw-page>
