--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
@@ -230,5 +230,12 @@
 
             </sw-card>
         {% endblock %}
+        {% block sw_sales_channel_detail_attribute_sets %}
+            <sw-attribute-set-renderer
+                v-if="next754"
+                :entity="salesChannel"
+                :sets="attributeSets">
+            </sw-attribute-set-renderer>
+        {% endblock %}
     </div>
 {% endblock %}
