NEXT-1623 - Add categories only in default language

--- a/Resources/administration/src/app/component/context-menu/sw-context-menu/sw-context-menu.scss
+++ b/Resources/administration/src/app/component/context-menu/sw-context-menu/sw-context-menu.scss
@@ -47,6 +47,8 @@ $sw-context-menu-z-index:                $z-index-context-menu;
 
             &:first-child {
                 border-top: 0 none;
+                padding-top: 5px;
+                margin-top: 0;
             }
         }
     }
