--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -46,6 +46,7 @@
                     :category="category"
                     :mediaItem="mediaItem"
                     :isLoading="isLoading"
+                    @sw-category-view-open-sidebar="openSidebar"
                     @sw-category-view-on-set-media="setMediaItem"
                     @sw-category-view-on-upload-media="onUploadAdded"
                     @sw-category-view-on-remove-media="onUnlinkLogo"
