NEXT-2021 - create seperate components for generating variants (works functional) and listing the variants (wip)

--- a/Resources/administration/src/app/component/base/sw-property-search/sw-property-search.html.twig
+++ b/Resources/administration/src/app/component/base/sw-property-search/sw-property-search.html.twig
@@ -10,7 +10,9 @@
                         </slot>
                     </div>
 
-                    <slot name="toolbar-items"></slot>
+                    <slot name="toolbar-items">
+                        {% block sw_property_toolbar_items %}{% endblock %}
+                    </slot>
                 </slot>
             </div>
         {% endblock %}
