--- a/Resources/administration/src/module/sw-product/view/sw-product-detail-variants/sw-product-detail-variants.html.twig
+++ b/Resources/administration/src/module/sw-product/view/sw-product-detail-variants/sw-product-detail-variants.html.twig
@@ -1,17 +1,20 @@
 <div class="sw-product-detail-variants">
     <sw-card class="sw-card__configurator" :title="$tc('sw-product.variant.configuratorCardTitle')">
-        <sw-product-configurator-selection
-                            :options="configuratorStore"
-                            :overlay="false"
-                            :collapsible="false">
+        <sw-product-variants-configurator-selection
+                :product="product"
+                :options="configuratorStore"
+                :overlay="false"
+                :collapsible="false"
+                @variationsGenerated="updateVariations">
+        </sw-product-variants-configurator-selection>
+    </sw-card>
 
-            <template slot="toolbar-items">
-                <div class="generate-variant-button-container">
-                    <sw-button @click="generateVariants">
-                        {{ $tc('sw-product.variant.generateVariantsButton') }}
-                    </sw-button>
-                </div>
-            </template>
-        </sw-product-configurator-selection>
+    <sw-card class="sw-card__generated-variants" :title="$tc('sw-product.variant.generatedVariantsCardTitle')">
+
+        <sw-product-variants-generated-variants
+                :product="product"
+                ref="generatedVariants">
+        </sw-product-variants-generated-variants>
+
     </sw-card>
 </div>
