--- a/Resources/administration/src/module/sw-login/page/index/sw-login.html.twig
+++ b/Resources/administration/src/module/sw-login/page/index/sw-login.html.twig
@@ -19,7 +19,7 @@
                 {% endblock %}
 
                 {% block sw_login_form %}
-                    <form class="sw-login__form" @submit.prevent="loginUserWithPassword">
+                    <div class="sw-login__content">
                         {% block sw_login_badge %}
                             <div class="sw-login__badge">
                                 {% block sw_login_badge_image %}
@@ -33,40 +33,21 @@
                             </div>
                         {% endblock %}
 
-                        {% block sw_login_form_headline %}
-                            <h2 class="sw-login__form-headline">{{ $tc('sw-login.index.headlineForm') }}</h2>
-                        {% endblock %}
-
-                        {% block sw_login_user_field %}
-                            <sw-field :class="{ 'has--error' : authStore.errorTitle.length && authStore.errorMessage.length }"
-                                      v-model="authStore.username"
-                                      :label="$tc('sw-login.index.labelUsername')"
-                                      :placeholder="$tc('sw-login.index.placeholderUsername')"
-                                      ref="swLoginUsernameField">
-                            </sw-field>
-                        {% endblock %}
-
-                        {% block sw_login_password_field %}
-                            <sw-field :class="{ 'has--error' : authStore.errorTitle.length && authStore.errorMessage.length }"
-                                      v-model="authStore.password"
-                                      :label="$tc('sw-login.index.labelPassword')"
-                                      :placeholder="$tc('sw-login.index.placeholderPassword')"
-                                      type="password">
-                            </sw-field>
-                        {% endblock %}
-
-                        {% block sw_login_submit %}
-                            <div class="sw-login__submit">
-                                {% block sw_login_submit_button %}
-                                    <sw-button class="sw-login__login-action" variant="primary">{{ $tc('sw-login.index.buttonLogin') }}</sw-button>
-                                {% endblock %}
-                            </div>
+                        {% block sw_login_view %}
+                            <transition name="fade" mode="out-in">
+                                <router-view :hash="hash"
+                                             @isLoading="setLoading(true)"
+                                             @isNotLoading="setLoading(false)"
+                                             @loginError="loginError"
+                                             @loginSuccess="loginSuccess">
+                                </router-view>
+                            </transition>
                         {% endblock %}
 
                         {% block sw_login_loader %}
                             <sw-loader v-if="isLoading"></sw-loader>
                         {% endblock %}
-                    </form>
+                    </div>
                 {% endblock %}
             </div>
         {% endblock %}
