--- a/Resources/administration/src/module/sw-login/page/index/sw-login.scss
+++ b/Resources/administration/src/module/sw-login/page/index/sw-login.scss
@@ -3,6 +3,8 @@
 $sw-login-color-background: #1C232C;
 $sw-login-container-color-background: $color-white;
 $sw-login-badge-color-background: $color-shopware-blue;
+$sw-login-back-color: $color-kashmir;
+$sw-login-forgot-password-link-color: blue;
 $sw-login-success-animation-duration: .3s;
 $sw-login-media-query-animation-duration: .2s;
 $sw-login-error-animation-duration: .15s;
@@ -44,7 +46,7 @@ $sw-login-error-animation-duration: .15s;
         }
     }
 
-    .sw-login__form {
+    .sw-login__content {
         min-width: 320px;
         padding: 130px 60px;
         position: relative;
@@ -67,10 +69,25 @@ $sw-login-error-animation-duration: .15s;
         margin-bottom: 40px;
         font-size: 18px;
         font-weight: normal;
+        display: flex;
+        align-items: center;
+
+        .sw-icon {
+            margin-right: 10px;
+        }
 
         @media screen and (max-width: 600px) {
             padding-right: 80px;
         }
+    }
+
+    .sw-login__back {
+        background: 0 none;
+        border: 0 none;
+        padding: 0;
+        line-height: inherit;
+        color: $sw-login-back-color;
+        outline: none;
     }
 
     .sw-login__badge {
@@ -181,6 +198,29 @@ $sw-login-error-animation-duration: .15s;
         }
     }
 
+    .sw-login__forgot-password-action {
+        color: $sw-login-badge-color-background;
+        text-decoration: none;
+        margin-right: 10px;
+    }
+
+    .sw-login__back-arrow {
+        cursor: pointer;
+    }
+
+    .fade-enter-active, .fade-leave-active {
+        transition: all .3s;
+        transform: translateX(0);
+    }
+    .fade-enter, .fade-leave-to {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+
+    .sw-login__recovery-form {
+        margin-top: 20px;
+    }
+
     &.is--login-success {
         background-color: $sw-login-container-color-background;
         overflow: hidden;
@@ -189,7 +229,6 @@ $sw-login-error-animation-duration: .15s;
             transform: scale(1.3);
         }
 
-        .sw-login__form,
         .sw-login__image {
             opacity: 0;
         }
