NTR - Fix language on customer detail page

--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -74,6 +74,8 @@
                                  :countries="countries"
                                  :customerEditMode="customerEditMode"
                                  :languages="languages"
+                                 :language="language"
+                                 :isLoading="isLoading"
                                  @activateCustomerEditMode="onActivateCustomerEditMode">
                     </router-view>
                 {% endblock %}
