--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
@@ -33,7 +33,9 @@
                                                            :customerName="customerName"
                                                            :customerGroups="customerGroups"
                                                            :paymentMethods="paymentMethods"
+                                                           :isLoading="isLoading"
                                                            :languages="languages"
+                                                           :language="language"
                                                            :customer="customer">
                                     </sw-customer-base-info>
                                 {% endblock %}
