--- a/Resources/administration/src/module/sw-order/component/sw-order-address-modal/sw-order-address-modal.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-address-modal/sw-order-address-modal.html.twig
@@ -21,6 +21,7 @@
                         <div v-if="currentlyShowing==='edit'">
                             {% block sw_order_address_modal_tabs_content_edit_address %}
                                 <sw-customer-address-form :address="address"
+                                                          :customer="customer"
                                                           :countries="countries">
                                 </sw-customer-address-form>
                             {% endblock %}
