--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
@@ -2,7 +2,9 @@
     <sw-container class="sw-customer-base-info" columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 15px">
         {% block sw_customer_base_info_metadata %}
             {% block sw_customer_base_info_metadata_left %}
-                <div class="sw-customer-base-info-columns">
+                <sw-loader v-if="isLoading"></sw-loader>
+
+                <div v-else class="sw-customer-base-info-columns">
                     {% block sw_customer_base_metadata_customer_group %}
                         <sw-description-list>
                             {% block sw_customer_base_metadata_customer_group_label %}
@@ -83,15 +85,15 @@
 
                             {% block sw_customer_base_metadata_language_content %}
                                 <dd v-if="!customerEditMode">
-                                    {{ customer.language.name }}
+                                    {{ language.name }}
                                 </dd>
                             {% endblock %}
 
                             {% block sw_customer_base_metadata_language_editor %}
                                 <dd v-else>
                                     <sw-select-field v-model="customer.languageId" size="small">
-                                        <option v-for="language in languages" :value="language.id">
-                                            {{ language.name }}
+                                        <option v-for="lang in languages" :value="lang.id">
+                                            {{ lang.name }}
                                         </option>
                                     </sw-select-field>
                                 </dd>
