--- a/Resources/administration/src/module/sw-product/component/sw-product-variants-configurator-selection/sw-product-variants-configurator-selection.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants-configurator-selection/sw-product-variants-configurator-selection.html.twig
@@ -1,7 +1,60 @@
-{% block sw_property_toolbar_items %}
-    <div class="generate-variant-button-container">
-        <sw-button @click="generateVariants">
-            {{ $tc('sw-product.variant.generateVariantsButton') }}
-        </sw-button>
+
+{% block sw_property_search_field %}
+    <div class="sw-property-search__toolbar sw-product-variants-configurator-selection__toolbar">
+        <slot name="toolbar">
+            <div class="sw-property-search__search-field-container">
+                <slot name="toolbar-search-field">
+                    <sw-field :placeholder="$tc('sw-property-search.placeholderSearch')"  autocomplete="off" class="sw-property-search__search-field" ref="searchField" @focus="onFocusSearch" @input="onSearchOptions"></sw-field>
+                </slot>
+            </div>
+
+            <slot name="toolbar-items">
+                <div class="generate-variant-button-container">
+                    <sw-button @click="generateVariants(false)" :disabled="isLoading">
+                        {{ $tc('sw-product.variant.generateVariantsButton') }}
+                    </sw-button>
+                </div>
+            </slot>
+        </slot>
     </div>
 {% endblock %}
+
+{% block sw_property_search_inner_after %}
+    <transition name="generate-variant-progress-bar--transition">
+        <div class="generate-variant-progress-bar__wrapper" v-show="isLoading">
+            <sw-progress-bar class="generate-variant-progress-bar" :value="progressInPercentage"></sw-progress-bar>
+            <span class="generate-variant-progress-bar__description">
+                {{ actualProgress }} von {{ maxProgress }} Varianten generiert
+            </span>
+        </div>
+    </transition>
+
+    <sw-modal v-if="warningModal"
+              @closeModal="onCloseWarningModal"
+              title="Warnung!"
+              variant="small">
+
+        <p class="sw-product-variants-configurator-selection__modal--delete-text">
+            Du möchtest folgende Anzahl an Produkt-Varianten erstellen: <strong>{{ warningModalNumber }}</strong><br><br>
+            Die Generierung dieser großen Anzahl an Varianten kann
+            sehr lange dauern und zu einem Browserabsturz führen. <br><br>
+            Willst du wirklich fortfahren?
+        </p>
+
+        <template slot="modal-footer">
+            <sw-button @click="onCloseWarningModal"
+                       size="small">
+                Abbrechen
+            </sw-button>
+
+            <sw-button @click="onConfirmWarningModal"
+                       variant="primary"
+                       size="small">
+                Trotzdem generieren
+            </sw-button>
+        </template>
+
+    </sw-modal>
+
+{% endblock %}
+
