NEXT-1710 - fix product stream preview modal

--- a/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
@@ -82,7 +82,7 @@
 
                 <sw-product-stream-modal-preview
                         v-if="showModalPreview"
-                        :productFilters="productStream.filters"
+                        :productFilter="productStream.filters[0]"
                         ref="modalPreview"
                         @sw-product-stream-modal-preview-close="closeModalPreview">
                 </sw-product-stream-modal-preview>
