NEXT-1623 - Add product assignment select changes and fix doubled event listener problem

--- a/Resources/administration/src/module/sw-category/component/sw-category-select/sw-category-select.scss
+++ b/Resources/administration/src/module/sw-category/component/sw-category-select/sw-category-select.scss
@@ -10,11 +10,16 @@
         padding: 0;
         border: none;
         height: 43px;
+
+        .sw-icon {
+            display: none;
+        }
     }
 
     .sw-select__input-single {
         border: none;
         font-size: 14px;
         background: #FFF;
+        padding: 8px 16px;
     }
 }
