--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.scss
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.scss
@@ -8,7 +8,7 @@
 
     &.is--mobile {
         .sw-page__content.has--side-content {
-            grid-template-columns: 1fr;
+            grid-template-columns: 1fr auto;
         }
         .sw-page__main-content {
             display: none;
